--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -2,5 +2,6 @@
   "name": "@koact/react",
   "version": "1.0.0",
   "main": "src/index.ts",
-  "module": "src/index.ts"
+  "module": "src/index.ts",
+  "types": "src/index.ts"
 }
